# 69sh

./: .gitignore  Makefile  meson.build
tests/: default.nix  run.py
tests/testsuite/builtins/Easy/: tests.yml
tests/testsuite/builtins/Hard/: if_file.sh  if_files2.sh  tests.yml
tests/testsuite/builtins/Medium/: tests.yml
tests/testsuite/function/easy/: fun_easy.sh  tests.yml
tests/testsuite/function/medium/: fun_med.sh  tests.yml
tests/testsuite/operator/and/: and_file.sh  tests.yml
tests/testsuite/operator/or/: tests.yml
tests/testsuite/redirection/file/: tests.yml
tests/testsuite/redirection/pipe/: tests.yml
tests/testsuite/sandbox/: output.txt
